# hermes

./: .gitignore  Cargo.toml  README.md
.github/: SECURITY.md  pull_request_template.md
host/: Cargo.toml
peer/: Cargo.toml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
peer/src/: app.css  app.html
peer/src-tauri/: Cargo.toml  tauri.conf.json
peer/src-tauri/src/: global.rs  lib.rs  main.rs  network.rs  state.rs
peer/src-tauri/src/network/: discovery.rs  protocol.rs
peer/src/lib/: log.ts  store.ts  types.ts
peer/src/lib/components/custom/: directorytree.svelte  index.ts  sidebar.svelte  simpledirectorytree.svelte  themetoggle.svelte
peer/src/lib/components/ui/sidebar/: sidebar-trigger.svelte
peer/src/routes/: +layout.svelte  +page.svelte
peer/src/routes/peer/: +page.svelte
peer/src/routes/peer/[nodeid]/: +page.svelte
peer/src/routes/peers/: +page.svelte
peer/src/routes/upload/: +page.svelte
