[package]
name = "hermes"
version = "0.1.0"
description = "Hermes a p2p file sharing application."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hermes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
tauri-plugin-dialog = "2"
iroh = { version = "0.35.0", features = ["discovery-local-network"] }
iroh-blobs = { version = "0.35.0", features = ["rpc"] }
iroh-docs = { version = "0.35.0", features = ["rpc"] }
tokio = "1.45.1"
futures-core = "0.3.31"
futures-lite = "2.6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
